feat(web): revisión de partida — barra de evaluación, material, clasificación de jugadas, pistas, animación de la jugada previa y flujo de varias jugadas en puzzles, flechas anterior/siguiente para repasar la línea de solución completa; feat(puzzles): la generación puede producir líneas de varias jugadas, intento jugada a jugada, pistas, y crédito parcial